--- a/.editorconfig
+++ b/.editorconfig
@@ -1,15 +1,16 @@
 root = true
 
 [*]
-indent_style = space
+indent_style = tab
 indent_size = 2
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.php]
-indent_style = tab
+[*.{yml,json}]
+indent_style = space
+indent_size = 2
 
 [*.md]
 trim_trailing_whitespace = false
