Complete overhaul of the file hierarchy and tentative fix of the deploy script.

--- a/.distignore
+++ b/.distignore
@@ -1,18 +1,8 @@
-/.git
-/.github
+/.*
+/*.dist
+/*.json
+/*.lock
+/*.md
+/admin
 /node_modules
-/src
-/.wordpress-org
-/vendor
-
-.distignore
-.eslintrc.js
-.gitignore
-.editorconfig
-Makefile
-package.json
-package-lock.json
-composer.json
-composer.lock
-README.md
-phpcs.xml.dist
+/rollup.js
