--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,10 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    # - name: Build
-    #   run: |
-    #     npm install
-    #     npm run build
+    - uses: php-actions/composer@v6
+    - uses: actions/setup-node@v3
+      with:
+        node-version: 18.x
+    - uses: borales/actions-yarn@v4
     - name: WordPress Plugin Deploy
       uses: 10up/action-wordpress-plugin-deploy@master
       env:
