--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
-.DS_Store
-
-/node_modules/
-npm-debug.log
-
-/vendor/
-/bin
-
-wp-config.php
+/admin.js
+/node_modules
+/package-lock.json
+/vendor
