--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,13 +8,22 @@ jobs:
     name: New tag
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - uses: php-actions/composer@v6
-    - uses: actions/setup-node@v3
+
+    - name: Checkout
+      uses: actions/checkout@master
+
+    - name: Install PHP Dependencies
+      uses: php-actions/composer@v6
+
+    - name: Install NodeJS
+      uses: actions/setup-node@v3
       with:
         node-version: 18.x
-    - uses: borales/actions-yarn@v4
-    - name: WordPress Plugin Deploy
+
+    - name: Build Admin
+      uses: borales/actions-yarn@v4
+
+    - name: Deploy WordPress Plugin
       uses: 10up/action-wordpress-plugin-deploy@master
       env:
         SVN_PASSWORD: ${{ secrets.SVN_PASSWORD }}
