--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     },
     "devDependencies": {
         "archiver": "5.3.1",
+        "dateformat": "5.0.3",
         "eslint": "8.40.0",
         "eslint-config-creative-area": "0.11.1",
         "eslint-plugin-svelte": "2.28.0",
